# SENSE-The-Game-Modloader

./: .gitignore  README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt  android_config.cmake  incbin_import.cmake  install_launcher.cmake  minhook_import.cmake  msvc_config.cmake  sdl2_import.cmake
app/src/main/cpp/: main.cpp  proxy.def
app/src/main/java/com/ipoleksenko/sense/: MainActivity.java
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml
